--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-eslint": "^1.0.0",
     "gulp-if": "^2.0.0",
+    "gulp-mocha": "^2.1.3",
     "gulp-rename": "^1.2.2",
     "gulp-sequence": "^0.4.1",
     "gulp-sourcemaps": "^1.6.0",
