--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - "npm install -g gulp"
 
 after_success:
-  - "./node_modules/.bin/coveralls < build/coverage.lcov"
+  - "./node_modules/.bin/coveralls < build/lcov.info"
