--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
     "chai": "^3.4.0",
+    "coveralls": "^2.11.4",
     "del": "^2.0.2",
     "eslint": "^1.7.3",
     "eslint-config-airbnb": "^0.1.0",
@@ -48,12 +49,15 @@
     "gulp-debug": "^2.1.2",
     "gulp-eslint": "^1.0.0",
     "gulp-if": "^2.0.0",
+    "gulp-istanbul": "^0.10.2",
     "gulp-mocha": "^2.1.3",
     "gulp-rename": "^1.2.2",
     "gulp-sequence": "^0.4.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-spawn-mocha": "^2.2.1",
     "gulp-util": "^3.0.7",
+    "isparta": "^3.1.0",
+    "istanbul": "^0.4.0",
     "jasmine": "^2.3.2",
     "mocha": "^2.3.3",
     "readme-to-man-page": "^0.5.0",
