--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A revisionist approach to git history, with filter-branch",
   "preferGlobal": true,
   "main": "dist/git-streaker.js",
-  "bin": {
-    "git-streaker": "dist/git-streaker.js"
-  },
+  "bin": "bin/git-streaker",
   "man": "man/git-streaker.1",
   "repository": {
     "type": "git",
