--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
     "chai": "^3.4.0",
+    "chai-as-promised": "^5.1.0",
     "coveralls": "^2.11.4",
     "del": "^2.0.2",
     "eslint": "^1.7.3",
@@ -60,6 +61,7 @@
     "jasmine": "^2.3.2",
     "mocha": "^2.3.3",
     "readme-to-man-page": "^0.5.0",
+    "sinon": "^1.17.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
