--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -2,5 +2,10 @@
   "env": {
     "node": true,
     "mocha": true
+  },
+  "globals": {
+    "chai": false,
+    "expect": false,
+    "describe": false
   }
 }
