--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "expr": true,
   "env": {
     "node": true,
     "mocha": true
@@ -7,5 +8,8 @@
     "chai": false,
     "expect": false,
     "describe": false
+  },
+  "rules": {
+    "no-unused-expressions": 0
   }
 }
